--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="info">
-      
-        <h1>PARA SU PEDIDO REALIZAR, LA SIGUIENTE INFORMACIÓN DEBE REVISAR</h1>
 
-        <p>
-          Agradecemos su compresión ante las siguientes situaciones que se
-          puedan presentar con el despacho del sus pedidos, debido a la
-          situación de contingencia.
-        </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="info">
+      <h1>PARA SU PEDIDO REALIZAR, LA SIGUIENTE INFORMACIÓN DEBE REVISAR</h1>
+      <p>
+        Agradecemos su compresión ante las siguientes situaciones que se
+        puedan presentar con el despacho del sus pedidos, debido a la
+        situación de contingencia.
+      </p>
+    </div>
+
+    <div class="requeriments">
+      <div class="only-img">
+        <img src="https://www.paho.org/hq/images/stories/mh/icons-news-blue-400x400.png" alt="">
+      </div>
+      <div class="requeriments__p">
+        <p><span class="badge badge-pill badge-warning">1</span>Pueden existir restricciones en la cantidad de unidades
+          de un mismo producto que puede pedir.</p>
+        <p><span class="badge badge-pill badge-warning">2</span>Los productos de venta exclusiva virtual solo se pueden
+          recoger en tienda</p>
+        <p><span class="badge badge-pill badge-warning">3</span>un teletendero lo llamará para confirmar su pedido</p>
       </div>
 
-      <div class="requeriments">
-        <div class="only-img">
-          <img src="https://www.paho.org/hq/images/stories/mh/icons-news-blue-400x400.png" alt="">
-        </div>
-        <div class="requeriments__p">
-          <p><span class="badge badge-pill badge-warning">1</span>Pueden existir restricciones en la cantidad de unidades de un mismo producto que puede pedir.</p>
-          <p><span class="badge badge-pill badge-warning">2</span>Los productos de venta exclusiva virtual solo se pueden recoger en tienda</p>
-          <p><span class="badge badge-pill badge-warning">3</span>un teletendero lo llamará para confirmar su pedido</p>
-        </div>
-
-        <div class="buttons">
-          <button type="submit" class="button-active">Regresar</button>
-          <button type="submit">Continuar</button>
-        </div>
+      <div class="buttons">
+        <button type="submit" class="button-active">Regresar</button>
+        <button type="submit">Continuar</button>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
